<?xml version="1.0" encoding="utf-8"?>
<!--
  This file is part of Barnacle Wifi Tether
  Copyright (C) 2010 by Szymon Jakubczak

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Wireless LAN">
        <EditTextPreference android:title="SSID (Network Name)"
            android:key="@string/lan_essid" android:defaultValue="HLMP-MANET"
            android:singleLine="true" />
        <ListPreference android:title="Channel"
            android:key="@string/lan_channel" android:defaultValue="7"
            android:entries="@array/channel_names" android:entryValues="@array/channel_values" />
        <ListPreference android:title="Custom Wifi Ad-hoc"
            android:key="@string/lan_script" android:defaultValue=""
            android:entries="@array/script_names" android:entryValues="@array/script_values" />
        <CheckBoxPreference android:title="Skip wpa_supplicant"
            android:summary="Configure wifi directly"
            android:key="@string/lan_wext" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Advanced">
        <PreferenceScreen android:title="IPv4" android:summary="IPv4 Host Configuration">
            <android.hlmp.bernacle.IPPreference android:title="Gateway"
                android:key="@string/lan_gw"
                android:singleLine="true" />
            <android.hlmp.bernacle.IPPreference android:title="Netmask"
                android:key="@string/lan_netmask" android:defaultValue="255.255.0.0"
                android:singleLine="true" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="Interfaces">
        <EditTextPreference android:title="WAN"
            android:key="@string/if_wan" android:defaultValue=""
            android:hint="leave empty to autodetect"
            android:singleLine="true" />
        <EditTextPreference android:title="LAN"
            android:key="@string/if_lan" android:defaultValue=""
            android:hint="leave empty to autodetect"
            android:singleLine="true" />
    </PreferenceCategory>
</PreferenceScreen>
